fixed file path for images

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img class="item1" src="/images/udemy logo.png" alt="udemy logo">
+            <img class="item1" src="./images/udemy logo.png" alt="udemy logo">
         </div>
         <div class="wrapper">
             
             <h1 class="item2">Order Confirmation</h1>
            
             <div class="course item3">
-                <img src="/images/course.png" alt="udemy course image">
+                <img src="./images/course.png" alt="udemy course image">
                 <div class="cta">
                     <h4>MERN eCommerce From Scratch</h4>
                     <div class="profile">
-                        <img src="/images/profile pic.png" alt="brad traversy profile image">
+                        <img src="./images/profile pic.png" alt="brad traversy profile image">
                         <span>Brad Traversy</span>
                     </div>
                     <button>Start Course</button>
